# task-mapping-evaluator

./: .gitignore  LICENSE  README.md  TaskMapping.sln
TaskMapping/: .gitignore  CMakeLists.txt  ComputationBasedSystem.h  DecompositionMapper.h  DecompositionMapperPolicies.h  DeviceBasedMILPMapper.cpp  DeviceBasedMILPMapper.h  DrawGraph.cpp  DrawGraph.h  Evaluation.h  EvaluationLog.h  FindGUROBI.cmake  GUID.cpp  GUID.h  GraphExport.h  GreedyMapper.h  HEFTMapper.h  MILPUtility.cpp  MILPUtility.h  Mapper.h  Mapping.h  MappingUtility.h  NSGAIIMapper.cpp  NSGAIIMapper.h  PEFTMapper.h  PathBasedMapper.h  Platform.h  PlatformGenerator.cpp  PlatformGenerator.h  ResultHandling.h  SafeBoostHeaders.h  SeriesParallelDecomposition.h  SeriesParallelDecompositionMapper.h  SimulatedAnnealingMapper.cpp  SimulatedAnnealingMapper.h  SingleNodeDecompositionMapper.h  System.h  TaskGraph.cpp  TaskGraph.h  TaskGraphGenerator.h  (+12 more)
